Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/create.mdx
+++ b/api-reference/endpoint/create.mdx
@@ -1,4 +1,17 @@
 ---
-title: 'Create Plant'
-openapi: 'POST /plants'
+title: "Create Plant"
+openapi: "POST /plants"
+description: "Description of method"
 ---
+
+<RequestExample>
+
+``` filename
+// add code hereььь
+```
+
+
+``` File 2
+```
+
+</RequestExample>
