Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction
+title: Введение
 description: "Welcome to the home of your new documentation"
 ---
 
@@ -14,7 +14,7 @@ description: "Welcome to the home of your new documentation"
   alt="Hero Dark"
 />
 
-## Setting up
+## Настройки
 
 The first step to world-class documentation is setting up your editing environments.
 
