--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: 'Быстрый старт'
+description: 'Принимайте платежи через платёжную страницу'
 ---
 
 ## Setup your development
