--- a/api-reference/endpoint/checkout.mdx
+++ b/api-reference/endpoint/checkout.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Получить страницу оплаты"
-openapi: "POST /prepare2/api/v3/checkout"
+openapi: "../openapi.json POST /prepare2/api/v3/checkout"
+
 description: "Получить ссылку на страницу оплаты"
 ---
 
