Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/checkout.mdx
+++ b/api-reference/endpoint/checkout.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Получить страницу оплаты"
-openapi: "../openapi.json POST /prepare2/api/v3/checkout"
-
+openapi: "POST /prepare2/api/v3/checkout"
 description: "Получить ссылку на страницу оплаты"
 ---
 
