--- a/api-reference/endpoint/operation.mdx
+++ b/api-reference/endpoint/operation.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'Операции'
+title: 'Получить операции'
 description: 'Получить операции'
+openapi: "GET /collector/api/v3/operation"
 ---
 
