Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get.mdx
+++ b/api-reference/endpoint/get.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Get Plantsz"
-openapi: "GET /plants"
+title: "Get Operations"
+openapi: "GET /operation"
 description: "тыры пыры"
 ---
