Documentation edits made through Mintlify web editor

--- a/products/checkout.mdx
+++ b/products/checkout.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Payment page'
-description: 'Description of your new file.'
+title: 'Приём платежей'
+description: 'Платёжный фрейм'
 ---
 
 
