Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -20,8 +20,8 @@ The first step to world-class documentation is setting up your editing environme
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
+    title="Приём платежей"
+    icon="fa-money-bill-transfer"
     href="https://mintlify.com/docs/quickstart"
   >
     Get your docs set up locally for easy development
