Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/operation.mdx
+++ b/api-reference/endpoint/operation.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Получить операции'
 description: 'Получить операции'
-openapi: "GET /collector/api/v3/operation"
+openapi: 'GET /collector/api/v3/operation'
 ---
 
