--- a/api-reference/endpoint/unconfirmed_success.mdx
+++ b/api-reference/endpoint/unconfirmed_success.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Получить успешные неподтверждённые операции'
 description: 'Получить успешные неподтверждённые операции'
-openapi: "GET /collector/api/v3/client_unconfirmed_success_payments"
+openapi: 'GET /collector/api/v3/client_unconfirmed_success_payments'
 ---
 
