Documentation edits made through Mintlify web editor

--- a/products/applepay.mdx
+++ b/products/applepay.mdx
@@ -1,17 +1,7 @@
 ---
 title: "Apple Pay"
-icon: "code"
+icon: "cc-apple-pay"
 description: "Description of your new file."
 ---
 
-<RequestExample>
-
-```bash filename
-// add code here
-```
-
-
-``` File 2
-```
-
-</RequestExample>
+## {{title}}
