--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -8,7 +8,7 @@ description: 'Приём платежей'
   this section by removing the api-reference folder.
 </Note>
 
-## Welcome
+## Приём платежей
 
 There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
 
