Documentation edits made through Mintlify web editor

--- a/products/card.mdx
+++ b/products/card.mdx
@@ -32,6 +32,14 @@ icon: "credit-card"
 
 <RequestExample>
 
+``` filename
+// add code here
+```
+
+</RequestExample>
+
+<RequestExample>
+
 ```bash Без передачи банковской карты
 curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
 --header 'Content-Type: application/json' \
