Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/checkout.mdx
+++ b/api-reference/endpoint/checkout.mdx
@@ -1,17 +1,7 @@
 ---
 title: "Получить страницу оплаты"
-openapi: "POST /prepare2/api/v3/checkout"
 description: "Получить ссылку на страницу оплаты"
+openapi: "POST /prepare2/api/v3/checkout"
 ---
 
-<RequestExample>
-
-``` filename
-// add code here if you want
-```
-
-
-``` File 2
-```
-
-</RequestExample>
+## {{title}}
