--- a/api-reference/endpoint/client_unconfirmed_success_payments.mdx
+++ b/api-reference/endpoint/client_unconfirmed_success_payments.mdx
@@ -4,3 +4,4 @@ description: 'Получить успешные неподтверждённые
 openapi: 'GET /collector/api/v3/client_unconfirmed_success_payments'
 ---
 
+## {{title}}
