--- a/api-reference/endpoint/webhook.mdx
+++ b/api-reference/endpoint/webhook.mdx
@@ -1,4 +1,10 @@
 ---
-title: 'Callback'
-openapi: 'WEBHOOK /plant/webhook'
+title: "Обратные уведомления"
+openapi: "WEBHOOK /plant/webhook"
 ---
+
+## {title}
+
+<ParamField path="param" type="string">
+  Enter a description
+</ParamField>
