--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,7 @@
 ---
-title: 'Введение'
-description: 'Приём платежей'
+title: "Введение"
+description: "Приём платежей"
+sidebarTitle: "Введение"
 ---
 
 <Note>
@@ -10,17 +11,11 @@ description: 'Приём платежей'
 
 ## Приём платежей
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
-
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
+<Card title="Finmar API" icon="code" href="/api-reference">
+  Смотреть OpenAPI спецификацию
 </Card>
 
-## Authentication
+## Аутентификация
 
 All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
 
