--- a/products/card.mdx
+++ b/products/card.mdx
@@ -1,12 +1,33 @@
 ---
 title: "Банковские карты"
-description: "Description of your new file."
+description: "Приём оплаты банковскими картами"
 icon: "credit-card"
 ---
 
-import Callback from '/snippets/callback.mdx';
+```mermaid
+  flowchart LR
+    subgraph subgraph1
+        direction TB
+        top1[top] --> bottom1[bottom]
+    end
+    subgraph subgraph2
+        direction TB
+        top2[top] --> bottom2[bottom]
+    end
+    %% ^ These subgraphs are identical, except for the links to them:
 
-Оператор может как напрямую перенаправлять пользователя на страницу оплаты, так и открывать ее в iframe на сайте проекта, или открыть в новой вкладке. Внешний вид стандартной страницы оплаты может быть изменен по желанию оператора.
+    %% Link *to* subgraph1: subgraph1 direction is maintained
+    outside --> subgraph1
+    %% Link *within* subgraph2:
+    %% subgraph2 inherits the direction of the top-level graph (LR)
+    outside ---> top2
+```
+
+Оператор может как напрямую перенаправлять пользователя на страницу оплаты, так и открывать ее в iframe на сайте проекта, или открыть в новой вкладке.
+
+Внешний вид стандартной страницы оплаты может быть изменен по желанию оператора.\\
+
+> asdasd
 
 ## **Общая схема работы**[**​**](https://finmar.tech/prepare/integrations-v2/vimapay/docs/api/payment/card/#%D0%BE%D0%B1%D1%89%D0%B0%D1%8F-%D1%81%D1%85%D0%B5%D0%BC%D0%B0-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B)
 
@@ -28,95 +49,74 @@ import Callback from '/snippets/callback.mdx';
   </Step>
 </Steps>
 
-<RequestExample>
+<Expandable>
+  ```bash Без передачи банковской карты
+  curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
+  --header 'Content-Type: application/json' \
+  --header 'Authorization: Basic cGxheWJybzptcTRWIWllNXFYaEE=' \
+  --data '{
+      "payment_profile": "sandbox",
+      "method": "card",
+      "report_metadata": "Fz022tCSaBuvvfQckp",
+      "client_operation_id": "Fz022tCSaBuvvfQckp",
+      "user": {
+          "user_id": "42d555d0-bdcb-4b47-a34c-731e3e91a2d0"
+      },
+      "amount": {
+          "amount": "9",
+          "currency": "EUR"
+      },
+      "url_callback": "https://gg.requestcatcher.com?callback",
+      "url_redirect_success": "https://gg.requestcatcher.com?success",
+      "url_redirect_fail": "https://gg.requestcatcher.com?fail",
+      "merchant_user_entry_point_url": "mechant.site/cashier/deposit"
+  }'
+  ```
 
-```bash Без передачи банковской карты
-curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
---header 'Content-Type: application/json' \
---header 'Authorization: Basic cGxheWJybzptcTRWIWllNXFYaEE=' \
---data '{
-    "payment_profile": "sandbox",
-    "method": "card",
-    "report_metadata": "Fz022tCSaBuvvfQckp",
-    "client_operation_id": "Fz022tCSaBuvvfQckp",
-    "user": {
-        "user_id": "42d555d0-bdcb-4b47-a34c-731e3e91a2d0"
-    },
-    "amount": {
-        "amount": "9",
-        "currency": "EUR"
-    },
-    "url_callback": "https://gg.requestcatcher.com?callback",
-    "url_redirect_success": "https://gg.requestcatcher.com?success",
-    "url_redirect_fail": "https://gg.requestcatcher.com?fail",
-    "merchant_user_entry_point_url": "mechant.site/cashier/deposit"
-}'
-```
+  ```bash С передачей банковской карты
+  curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
+  --header 'Content-Type: application/json' \
+  --header 'Authorization: Basic cHJldmlld19wcmVwcm9kOnFuYTRibmZhc3FrMjl1cTE=' \
+  --data '{
+      "payment_profile": "sandbox",
+      "method": "card",
+      "report_metadata": "Fz022tCSaBuvvfQckp",
+      "client_operation_id": "Fz022tCSaBuvvfQckp",
+      "user": {
+          "user_id": "b41648b0-4c25-458f-9485-d07508f4879f"
+      },
+      "bank_card": {
+          "cardholder": "NAME FNAME",
+          "cvv": "190",
+          "pan": "4111111111111111",
+          "expiration_month": 11,
+          "expiration_year": 29
+      },
+      "amount": {
+          "amount": "9",
+          "currency": "EUR"
+      },
+      "url_callback": "https://gg.requestcatcher.com?callback",
+      "url_redirect_success": "https://gg.requestcatcher.com?success",
+      "url_redirect_fail": "https://gg.requestcatcher.com?fail",
+      "merchant_user_entry_point_url": "mechant.site/cashier/deposit"
+  }'
+  ```
+</Expandable>
 
+<Expandable>
+  ```bash Response
+  {
+      "success": true,
+      "result": {
+          "url": "https://card.cheipho.com/transaction/6e89d40d-3fda-42a2-9c97-3564c8443c3a",
+          "reference_id": "6e89d40d-3fda-42a2-9c97-3564c8443c3a"
+      },
+      "trace_id": "8abfc59b1bd149b9a3e56e0226a4c796"
+  }
+  ```
+</Expandable>
 
-```bash С передачей банковской карты
-curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
---header 'Content-Type: application/json' \
---header 'Authorization: Basic cHJldmlld19wcmVwcm9kOnFuYTRibmZhc3FrMjl1cTE=' \
---data '{
-    "payment_profile": "sandbox",
-    "method": "card",
-    "report_metadata": "Fz022tCSaBuvvfQckp",
-    "client_operation_id": "Fz022tCSaBuvvfQckp",
-    "user": {
-        "user_id": "b41648b0-4c25-458f-9485-d07508f4879f"
-    },
-    "bank_card": {
-        "cardholder": "NAME FNAME",
-        "cvv": "190",
-        "pan": "4111111111111111",
-        "expiration_month": 11,
-        "expiration_year": 29
-    },
-    "amount": {
-        "amount": "9",
-        "currency": "EUR"
-    },
-    "url_callback": "https://gg.requestcatcher.com?callback",
-    "url_redirect_success": "https://gg.requestcatcher.com?success",
-    "url_redirect_fail": "https://gg.requestcatcher.com?fail",
-    "merchant_user_entry_point_url": "mechant.site/cashier/deposit"
-}'
-```
+...
 
-</RequestExample>
-
-<ResponseExample>
-
-```bash Response
-{
-    "success": true,
-    "result": {
-        "url": "https://card.cheipho.com/transaction/6e89d40d-3fda-42a2-9c97-3564c8443c3a",
-        "reference_id": "6e89d40d-3fda-42a2-9c97-3564c8443c3a"
-    },
-    "trace_id": "8abfc59b1bd149b9a3e56e0226a4c796"
-}
-```
-
-</ResponseExample>
-
-<Callback />
-
-## Тестовые карты
-
-Результат проведения тестовой операции зависит от введённого cvv-кода.
-
-<Note>
-  Данные карты можно использовать для проверки только на окружении sandbox.
-
-  На production окружении они работать не будут.
-</Note>
-
-| Карта              | Срок действия | CVV    | Ожидаемый результат                                                         |                           |
-| ------------------ | ------------- | ------ | --------------------------------------------------------------------------- | ------------------------- |
-| `4111111111111111` | `11/36`       | `190`  | `SUCCESS`                                                                   | Успех                     |
-| `4111111111111111` | `11/36`       | `360 ` | `PROCESSING_INSUFFICIENT_FUNDS`                                             | Нехватка средтв           |
-| `4111111111111111` | `11/36`       | `320`  | `PROCESSING_3D_SECURE_FAILED `                                              | Ошибка 3ds подтверждения  |
-| `4444444444444414` | `11/36`       | `111`  | `SUCCESS`  `PROCESSING_3D_SECURE_FAILED`  `PROCESSING_3D_SECURE_CANCELLED ` | Выбор результата в фрейме |
-|                    |               |        |                                                                             |                           |
+<TestCards />
