--- a/products/card.mdx
+++ b/products/card.mdx
@@ -4,6 +4,8 @@ description: "Приём оплаты банковскими картами"
 icon: "credit-card"
 ---
 
+
+## Общая схема работы
 ```mermaid
   flowchart LR
     subgraph subgraph1
@@ -29,7 +31,6 @@ icon: "credit-card"
 
 > asdasd
 
-## **Общая схема работы**[**​**](https://finmar.tech/prepare/integrations-v2/vimapay/docs/api/payment/card/#%D0%BE%D0%B1%D1%89%D0%B0%D1%8F-%D1%81%D1%85%D0%B5%D0%BC%D0%B0-%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D1%8B)
 
 <Steps>
   <Step title="Оператор отправляет запрос на создание операции и перенаправляет пользователя на полученный URL">
@@ -50,6 +51,29 @@ icon: "credit-card"
 </Steps>
 
 <Expandable>
+
+
+
+</Expandable>
+
+<Expandable>
+  ```bash Response
+  {
+      "success": true,
+      "result": {
+          "url": "https://card.cheipho.com/transaction/6e89d40d-3fda-42a2-9c97-3564c8443c3a",
+          "reference_id": "6e89d40d-3fda-42a2-9c97-3564c8443c3a"
+      },
+      "trace_id": "8abfc59b1bd149b9a3e56e0226a4c796"
+  }
+  ```
+</Expandable>
+
+...
+
+## Создание операции
+
+### Без передачи данных карты
   ```bash Без передачи банковской карты
   curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
   --header 'Content-Type: application/json' \
@@ -72,6 +96,9 @@ icon: "credit-card"
       "merchant_user_entry_point_url": "mechant.site/cashier/deposit"
   }'
   ```
+
+
+### С передачей банковской карты в запросе создания
 
   ```bash С передачей банковской карты
   curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
@@ -102,21 +129,18 @@ icon: "credit-card"
       "merchant_user_entry_point_url": "mechant.site/cashier/deposit"
   }'
   ```
-</Expandable>
+  
 
-<Expandable>
-  ```bash Response
-  {
-      "success": true,
-      "result": {
-          "url": "https://card.cheipho.com/transaction/6e89d40d-3fda-42a2-9c97-3564c8443c3a",
-          "reference_id": "6e89d40d-3fda-42a2-9c97-3564c8443c3a"
-      },
-      "trace_id": "8abfc59b1bd149b9a3e56e0226a4c796"
-  }
-  ```
-</Expandable>
+## Состояние операции
+Можно отслеживать состояние двумя способами:
+- Через обработку обратных уведомлений
+- Вызывая метод получения информации об операции
 
-...
 
+
+## Обратные уведомления
+фывфыв
+
+
+### Тестовые карты
 <TestCards />
