Documentation edits made through Mintlify web editor

--- a/products/card.mdx
+++ b/products/card.mdx
@@ -4,6 +4,8 @@ description: "Приём оплаты банковскими картами"
 icon: "credit-card"
 ---
 
+import Callback from '/snippets/callback.mdx';
+import TestCards from '/snippets/test-cards.mdx';
 
 ## Общая схема работы
 ```mermaid
@@ -140,7 +142,7 @@ icon: "credit-card"
 
 ## Обратные уведомления
 фывфыв
-
+<TestCards />
 
 ### Тестовые карты
 <TestCards />
