--- a/api-reference/endpoint/checkout.mdx
+++ b/api-reference/endpoint/checkout.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Получить страницу оплаты"
+title: "Создать платёж"
 description: "Получить ссылку на страницу оплаты"
 openapi: "POST /prepare2/api/v3/checkout"
 ---
