Documentation edits made through Mintlify web editor

--- a/products/widget.mdx
+++ b/products/widget.mdx
@@ -68,7 +68,7 @@ curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
   </Step>
   <Step title="Генерация платежной ссылки">
     Finmar API создает уникальный URL виджета и возвращает его сайту проекта
-  <Accordion title="Пример ответа" icon="sparkles">
+  <Accordion title="Пример ответа" icon="server">
     ```json
     {
     "success": true,
