Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/checkout.mdx
+++ b/api-reference/endpoint/checkout.mdx
@@ -2,6 +2,7 @@
 title: "Создать платёж"
 description: "Получить ссылку на страницу оплаты"
 openapi: "POST /prepare2/api/v3/checkout"
+mode: "wide"
 ---
 
-## {{title}}
+## {title}
