--- a/api-reference/endpoint/client_confirm_payment_all.mdx
+++ b/api-reference/endpoint/client_confirm_payment_all.mdx
@@ -1,14 +1,8 @@
 ---
-title: 'Подтвердить все операции'
-description: 'Подтвердить все операции'
-openapi: 'GET /collector/api/v3/client_confirm_payment_all'
+title: "Подтвердить все операции"
+description: "Подтвердить все операции"
+openapi: "GET /collector/api/v3/client_confirm_payment_all"
+mode: "wide"
 ---
 
-
-## {{title}}
-
-
-
-
-
-
+## {title}
