--- a/api-reference/endpoint/client_confirm_payment_by_client_operation_id.mdx
+++ b/api-reference/endpoint/client_confirm_payment_by_client_operation_id.mdx
@@ -1,10 +1,8 @@
 ---
-title: 'Подтвердить операцию по client_operation_id'
-description: 'Подтвердить операцию по client_operation_id'
-openapi: 'POST /collector/api/v3/client_confirm_payment_by_client_operation_id'
+title: "Подтвердить операцию по client_operation_id"
+description: "Подтвердить операцию по client_operation_id"
+openapi: "POST /collector/api/v3/client_confirm_payment_by_client_operation_id"
+mode: "custom"
 ---
 
-## {{title}}
-
-
-
+## {title}
