Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -15,7 +15,7 @@ description: "Welcome to the home of your new documentation"
   alt="Hero Dark"
 />
 
-The first step to world-class documentation is setting up your editing environments.
+The first step to documentation is setting up your editing environments.
 
 ## Make it yours
 
