Documentation edits made through Mintlify web editor

--- a/products/widget.mdx
+++ b/products/widget.mdx
@@ -2,6 +2,7 @@
 title: "Widget Integration"
 description: "Передовое платежное решение для приема депозитов с криптозеркалированием"
 icon: "dumpster-fire"
+tag: "BETA"
 ---
 
 import TestCards from '/snippets/test-cards.mdx';
