--- a/products/cryptogate/deposit.mdx
+++ b/products/cryptogate/deposit.mdx
@@ -8,7 +8,7 @@ description: "Приём платежей в криптовалютах"
 
 <Steps>
   <Step title="Проект запрашивает список доступных сетей и ассетов">
-    Проект запрашивает список доступных сетей и ассетов используя метод [/api/v3/gate/get-address/currencies/](https://vima.mintlify.app/api-reference/api-reference/получить-список-доступных-криптовалют-для-получения-адреса?playground=open) или [/api/v3/gate/get-url/currencies/](https://vima.mintlify.app/api-reference/api-reference/получить-список-доступных-криптовалют-для-генерации-url?playground=open).
+    Проект запрашивает список доступных сетей и ассетов используя метод [/api/v3/gate/get-address/currencies/](https://vima.mintlify.app/api-reference/%D0%BF%D0%BE%D0%BB%D1%83%D1%87%D0%B8%D1%82%D1%8C-%D1%81%D0%BF%D0%B8%D1%81%D0%BE%D0%BA-%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%D0%BD%D1%8B%D1%85-%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D0%BE%D0%B2%D0%B0%D0%BB%D1%8E%D1%82-%D0%B4%D0%BB%D1%8F-%D0%BF%D0%BE%D0%BB%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D1%8F-%D0%B0%D0%B4%D1%80%D0%B5%D1%81%D0%B0?playground=open) или [/api/v3/gate/get-url/currencies/](https://vima.mintlify.app/api-reference/%D0%BF%D0%BE%D0%BB%D1%83%D1%87%D0%B8%D1%82%D1%8C-%D1%81%D0%BF%D0%B8%D1%81%D0%BE%D0%BA-%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%D0%BD%D1%8B%D1%85-%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D0%BE%D0%B2%D0%B0%D0%BB%D1%8E%D1%82-%D0%B4%D0%BB%D1%8F-%D0%B3%D0%B5%D0%BD%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8-url?playground=open).
 
     Пример запроса:
 
